# nndm_library

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
docs/source/api/: FilesManipulator.rst  ReadFileBase.rst  ReadLhe.rst  ReadRoot.rst
examples/: files_manipulator.py  read_column_files.py  read_lhe_files.py  read_root_files.py
nndm_library/: __init__.py
nndm_library/lib/: __init__.py  reading_utils.py
nndm_library/utils/: __init__.py  reading_utils.py  tmp.py  utils.py
tests/: datareading_tests.py
tests/data_tests/: eta_decay_events_mk_0.014980679431428716_eps2_3.883209914996183e-10.lhe  eta_decay_events_mk_0.014980679431428716_eps2_3.8832099149961855e-09.lhe
tests/data_tests/background/: background_run_info.json
tests/data_tests/basic_type/more_particle_names/: guague_plus_higgs_bosons.txt
tests/data_tests/basic_type/some_particle_names/: leptons.txt  quarks.txt
tests/data_tests/signal/: signal.pickle
