[metadata]
name=nnmd-library
version=0.0.11
description=Library to read particle files and apply machine learning to them
long_description=TO DO
url=https://nnmd-library.readthedocs.io/
author=Andrés Felipe Gómez, Jose Miguel Muñoz Arias, Esteban Vásquez, Amalia Betancur, Guillermo Palacio
author_email=andres.gomez27@udea.edu.co 
license=MIT

[options]
python_requires = >=3.7, <4
install_requires =
    numpy >= 1.22.0
    pandas >= 1.4.1
    uproot >= 4.2.0
    tqdm >= 4.56.0
    pylhe >= 0.2.1
    lz4 >= 4.0.0
    xxhash >= 3.0.0

[options.packages.find]
where = src
